GNOME Bugzilla – Bug 777615
Crash due to desync between two bookmarks popovers
Last modified: 2017-01-22 18:20:27 UTC
* jhbuild run epiphany -p * Navigate to example.com * Click the add bookmark icon * Create a new tag, Misc * Open the main bookmarks list popover * Switch to Tags view * Click on Misc * Click on example.com * Click on Misc again to cause the tag to be removed from the bookmark * Note that in the location entry bookmarks popover, the Misc tag still appears to be selected * Click that Misc tag to see what happens. Crash
(In reply to Michael Catanzaro from comment #0) > * jhbuild run epiphany -p > * Navigate to example.com > * Click the add bookmark icon > * Create a new tag, Misc > * Open the main bookmarks list popover > * Switch to Tags view > * Click on Misc > * Click on example.com > * Click on Misc again to cause the tag to be removed from the bookmark Actually I clicked the X button, deleting the tag from the bookmarks manager.
The following fix has been pushed: 6784843 add-bookmark-popover: Always create new bookmarks grid when shown
Created attachment 343990 [details] [review] add-bookmark-popover: Always create new bookmarks grid when shown Otherwise it could be stale and lead to crashes.