add-bookmark-popover: Always create new bookmarks grid when shown

Otherwise it could be stale and lead to crashes.

https://bugzilla.gnome.org/show_bug.cgi?id=777615